Styling på scener

--- a/System/Rprodukter.fxml
+++ b/System/Rprodukter.fxml
@@ -16,7 +16,7 @@
          </font></Button>
       <Text layoutX="151.0" layoutY="541.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ny pris:">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font></Text>
       <Button layoutX="1157.0" layoutY="695.0" mnemonicParsing="false" onAction="#newProduct" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Tilføj" textFill="WHITE">
          <font>
@@ -26,17 +26,17 @@
       <TextField fx:id="addPrice" layoutX="1023.0" layoutY="600.0" prefHeight="34.0" prefWidth="159.0" />
       <Text layoutX="931.0" layoutY="626.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pris:" wrappingWidth="80.39999999999992">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Text>
       <Text layoutX="918.0" layoutY="565.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Navn:">
          <font>
-            <Font size="24.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Text>
       <Text layoutX="1029.0" layoutY="413.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tilføj vare">
          <font>
-            <Font size="30.0" />
+            <Font name="System Bold" size="30.0" />
          </font>
       </Text>
       <TextField fx:id="addName" layoutX="1021.0" layoutY="539.0" prefHeight="34.0" prefWidth="159.0" />
@@ -48,7 +48,7 @@
       </Button>
       <Text layoutX="319.0" layoutY="414.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ændre pris">
          <font>
-            <Font size="30.0" />
+            <Font name="System Bold" size="30.0" />
          </font>
       </Text>
       <TextField layoutX="674.0" layoutY="359.0" prefHeight="418.0" prefWidth="6.0" style="-fx-background-color: #58b2dc;">
@@ -61,10 +61,10 @@
             <Font size="1.0" />
          </font>
       </TextField>
-      <TableView fx:id="table_TPTV" layoutX="358.0" layoutY="84.0" prefHeight="242.0" prefWidth="638.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-width: 1.5;">
+      <TableView fx:id="table_TPTV" layoutX="314.0" layoutY="65.0" prefHeight="270.0" prefWidth="723.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-width: 1.5;">
         <columns>
           <TableColumn fx:id="col_TP" prefWidth="545.6000061035156" style="fx-border-color: #58b2dc; -fx-background-color: #58b2dc;" text="Tillægsprodukter" />
-            <TableColumn fx:id="col_pris" prefWidth="86.39990234375" style="fx-border-color: #58b2dc; -fx-background-color: #58b2dc;" text="Pris" />
+            <TableColumn fx:id="col_pris" prefWidth="174.4000122070313" style="fx-border-color: #58b2dc; -fx-background-color: #58b2dc;" text="Pris" />
         </columns>
       </TableView>
       <Button layoutX="1172.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadTP" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Indlæs" textFill="WHITE">
@@ -72,6 +72,9 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Button>
-      <Button layoutX="1029.0" layoutY="301.0" mnemonicParsing="false" onAction="#disableProd" text="SLET PRODUKT (RØD)" />
+      <Button layoutX="1202.0" layoutY="274.0" mnemonicParsing="false" onAction="#disableProd" prefHeight="51.0" prefWidth="128.0" style="-fx-background-color: #ff1919; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Slet produkt">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Button>
    </children>
 </AnchorPane>
