--- a/System/billetter2.fxml
+++ b/System/billetter2.fxml
@@ -47,7 +47,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Pane layoutX="1046.0" layoutY="464.0" prefHeight="144.0" prefWidth="248.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-width: 1.5; -fx-border-radius: 3;">
+      <Pane layoutX="1081.0" layoutY="464.0" prefHeight="144.0" prefWidth="248.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-width: 1.5; -fx-border-radius: 3;">
          <children>
             <Text layoutX="15.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ex moms:" wrappingWidth="109.60000000000014">
                <font>
@@ -88,10 +88,22 @@
             <TableColumn fx:id="col_produktantal" prefWidth="77.60003662109375" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Antal" />
          </columns>
       </TableView>
-      <Text layoutX="294.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Produkter at vælge imellem" />
-      <Text layoutX="725.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Valgte produkter" />
+      <Text layoutX="294.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Produkter at vælge imellem">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Text>
+      <Text layoutX="781.0" layoutY="122.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Valgte produkter">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Text>
       <TextField fx:id="inputAntal" layoutX="198.0" layoutY="608.0" />
-      <Text layoutX="201.0" layoutY="595.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Antal:" />
-      <Button layoutX="357.0" layoutY="608.0" mnemonicParsing="false" onAction="#insertValgt" text="Tilføj" />
+      <Text layoutX="201.0" layoutY="595.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Antal:">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Text>
+      <Button layoutX="357.0" layoutY="608.0" mnemonicParsing="false" onAction="#insertValgt" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3;" text="Tilføj" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
    </children>
 </AnchorPane>
