--- a/System/fly.fxml
+++ b/System/fly.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
    <children>
-      <TableView fx:id="table_fly" layoutX="27.0" layoutY="114.0" prefHeight="596.0" prefWidth="406.0">
+      <TableView fx:id="table_fly" layoutX="21.0" layoutY="114.0" prefHeight="596.0" prefWidth="406.0">
         <columns>
             <TableColumn fx:id="col_flynr" prefWidth="82.39999008178711" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Flynr" />
             <TableColumn fx:id="col_flynavn" prefWidth="246.3999786376953" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Navn" />
@@ -28,7 +28,7 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Button>
-      <Button layoutX="1175.0" layoutY="669.0" mnemonicParsing="false" onAction="#switchToNyBillet" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Næste" textFill="WHITE">
+      <Button layoutX="1179.0" layoutY="684.0" mnemonicParsing="false" onAction="#switchToNyBillet" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Næste" textFill="WHITE">
          <font>
             <Font name="System Bold" size="22.0" />
          </font>
@@ -41,28 +41,43 @@
             <TableColumn fx:id="col_retur" prefWidth="83.199951171875" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc;" text="Retur (oveni)" />
          </columns>
       </TableView>
-      <TextField fx:id="HH" layoutX="1016.0" layoutY="323.0" prefHeight="26.0" prefWidth="40.0" promptText="HH" />
-      <Text layoutX="1016.0" layoutY="264.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg dato:" />
-      <DatePicker fx:id="dateSelection" layoutX="1016.0" layoutY="268.0" />
-      <Text layoutX="1061.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text=":" />
-      <TextField fx:id="MM" layoutX="1069.0" layoutY="323.0" prefHeight="26.0" prefWidth="40.0" promptText="MM" />
-      <Text layoutX="1016.0" layoutY="318.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg afgang:" />
-      <TextField fx:id="HH2" disable="true" layoutX="1021.0" layoutY="587.0" prefHeight="26.0" prefWidth="40.0" promptText="HH" />
-      <Text layoutX="1021.0" layoutY="528.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg dato:" />
-      <DatePicker fx:id="dateSelection2" disable="true" layoutX="1021.0" layoutY="532.0" />
-      <Text layoutX="1066.0" layoutY="604.0" strokeType="OUTSIDE" strokeWidth="0.0" text=":" />
-      <TextField fx:id="MM2" disable="true" layoutX="1074.0" layoutY="587.0" prefHeight="26.0" prefWidth="40.0" promptText="MM" />
-      <Text layoutX="1021.0" layoutY="582.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg afgang:" />
-      <Text layoutX="1080.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tur">
+      <TextField fx:id="HH" layoutX="1109.0" layoutY="326.0" prefHeight="26.0" prefWidth="40.0" promptText="HH" />
+      <Text layoutX="1109.0" layoutY="264.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg dato:">
          <font>
-            <Font size="30.0" />
+            <Font name="System Bold" size="12.0" />
+         </font></Text>
+      <DatePicker fx:id="dateSelection" layoutX="1108.0" layoutY="268.0" />
+      <Text layoutX="1154.0" layoutY="343.0" strokeType="OUTSIDE" strokeWidth="0.0" text=":" />
+      <TextField fx:id="MM" layoutX="1163.0" layoutY="326.0" prefHeight="26.0" prefWidth="40.0" promptText="MM" />
+      <Text layoutX="1110.0" layoutY="319.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg afgang:">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Text>
+      <TextField fx:id="HH2" disable="true" layoutX="1109.0" layoutY="595.0" prefHeight="26.0" prefWidth="40.0" promptText="HH" />
+      <Text layoutX="1111.0" layoutY="517.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg dato:">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Text>
+      <DatePicker fx:id="dateSelection2" disable="true" layoutX="1109.0" layoutY="532.0" />
+      <Text layoutX="1154.0" layoutY="611.0" strokeType="OUTSIDE" strokeWidth="0.0" text=":" />
+      <TextField fx:id="MM2" disable="true" layoutX="1162.0" layoutY="596.0" prefHeight="26.0" prefWidth="40.0" promptText="MM" />
+      <Text layoutX="1114.0" layoutY="582.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vælg afgang:">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Text>
+      <Text layoutX="1169.0" layoutY="202.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tur">
+         <font>
+            <Font name="System Bold" size="30.0" />
          </font>
       </Text>
-      <Text layoutX="1078.0" layoutY="494.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retur">
+      <Text layoutX="1157.0" layoutY="472.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retur">
          <font>
-            <Font size="30.0" />
+            <Font name="System Bold" size="30.0" />
          </font>
       </Text>
-      <CheckBox layoutX="1019.0" layoutY="412.0" mnemonicParsing="false" onAction="#enableRetur" text="Tur/Retur" />
+      <CheckBox layoutX="1110.0" layoutY="403.0" mnemonicParsing="false" onAction="#enableRetur" text="Tur/Retur">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></CheckBox>
    </children>
 </AnchorPane>
