--- a/System/nybillet.fxml
+++ b/System/nybillet.fxml
@@ -6,25 +6,37 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SceneController">
    <children>
-      <Text layoutX="352.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Evt CVR (Skriv 0 hvis intet CVR):" />
-      <Button layoutX="492.0" layoutY="340.0" mnemonicParsing="false" onAction="#switchToProdukter" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Udfør" textFill="WHITE">
+      <Text layoutX="853.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Evt CVR (Skriv 0 hvis intet CVR):" wrappingWidth="215.99997558593748">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="14.0" />
+         </font></Text>
+      <Button layoutX="1176.0" layoutY="682.0" mnemonicParsing="false" onAction="#switchToProdukter" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #89cff0; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Udfør" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <Button layoutX="21.0" layoutY="342.0" mnemonicParsing="false" onAction="#switchToFly" prefHeight="27.0" prefWidth="90.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Fortryd" textFill="#58b2dc">
+      <Button layoutX="55.0" layoutY="682.0" mnemonicParsing="false" onAction="#switchToFly" prefHeight="51.0" prefWidth="157.0" style="-fx-background-color: #ffffff; -fx-border-color: #58b2dc; -fx-border-radius: 3; -fx-border-width: 1.5;" text="Fortryd" textFill="#58b2dc">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <Text layoutX="52.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Navn:" wrappingWidth="32.799999999999955" />
-      <Text layoutX="52.0" layoutY="167.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tlfnr:" wrappingWidth="28.32421875" />
-      <Text layoutX="52.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" wrappingWidth="32.799999999999955" />
-      <TextField fx:id="inputNavn" layoutX="90.0" layoutY="111.0" />
-      <TextField fx:id="inputTlf" layoutX="90.0" layoutY="150.0" />
-      <TextField fx:id="inputEmail" layoutX="90.0" layoutY="187.0" />
-      <TextField fx:id="inputCVR" layoutX="352.0" layoutY="110.0" promptText="CVR" />
+      <Text layoutX="264.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Navn:" wrappingWidth="91.20003967285152">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font></Text>
+      <Text layoutX="264.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tlfnr:" wrappingWidth="63.19999389648433">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font></Text>
+      <Text layoutX="264.0" layoutY="365.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:" wrappingWidth="91.20003967285152">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font></Text>
+      <TextField fx:id="inputNavn" layoutX="356.0" layoutY="165.0" prefHeight="51.0" prefWidth="202.0" />
+      <TextField fx:id="inputTlf" layoutX="356.0" layoutY="246.0" prefHeight="51.0" prefWidth="202.0" />
+      <TextField fx:id="inputEmail" layoutX="356.0" layoutY="332.0" prefHeight="51.0" prefWidth="202.0" />
+      <TextField fx:id="inputCVR" layoutX="853.0" layoutY="246.0" prefHeight="51.0" prefWidth="202.0" promptText="CVR" />
    </children>
 </AnchorPane>
